--- a/WebContent/cost_statistics/costStatistics_list.html
+++ b/WebContent/cost_statistics/costStatistics_list.html
@@ -110,6 +110,7 @@
                         }
                         var autoComplete = new AutoComplete("city_name_control","control_city",controlCityNameArray);
                         autoComplete.start(event);
+                        $("#control_city").attr("style","width: 150px;z-index: 99999;left: 5.4%;top: 13%;");
                     }
                 },false);
 
@@ -127,6 +128,7 @@
                             }
                             var autoComplete = new AutoComplete("city_name_control","control_city",controlCityNameArray);
                             autoComplete.start(event);
+                            $("#control_city").attr("style","width: 150px;z-index: 99999;left: 5.4%;top: 13%;");
                         }
                     },false);
             }
