--- a/WebContent/crm/user_analysis.html
+++ b/WebContent/crm/user_analysis.html
@@ -149,8 +149,8 @@
                             <div class="pull-left yonghu yonghu3 text-center" id="yonghu3"><span id="userR1">无效用户<br>5</span></div>
                             <div class="pull-left yonghu yonghu5 text-center" id="yonghu5"><span id="userR5">无交易用户<br>5</span></div>
                         </div>
-                        <p class="col-sm-12" style="padding-top: 5px;color: #777">口径说明：1、真实用户=社员、历史消费3次以上，无效用户=消费1次且从未自己下单的用户。</p>
-                        <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">2、僵尸用户=2018年未消费，待确认用户=注册人数-真实用户-无效用户-僵尸用户。</p>
+                        <p class="col-sm-12" style="padding-top: 5px;color: #777">口径说明：1、真实用户=社员+历史消费3次以上，无效用户=仅消费1次且从未使用app的用户。</p>
+                        <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">2、僵尸用户=2018年未消费，待确认用户=注册人数-真实用户-无效用户-僵尸用户-无交易用户。</p>
                     </div>
                 </div>
                 <div class="box box-default">
@@ -1328,33 +1328,33 @@
                         userR1=userR2=userR3=userR4=userR5=0;
                     }
                     var spaceWidth = "0.5%";//缝隙宽
-                    document.getElementById('userR1').innerHTML="无效用户<br>"+userR1;
                     var yonghu3 = document.getElementById("yonghu3");
                     var userR1Width = 0.05;
                     if(parseInt(userR1)>=10000){
                         userR1Width = (userR1/customer_number).toFixed(2);
                     }
                     yonghu3.style.width = userR1Width*100+"%";
+                    document.getElementById('userR1').innerHTML="无效用户<br>"+userR1+"("+(userR1/customer_number).toFixed(2)*100+"%"+")";
 
-                    document.getElementById('userR3').innerHTML="真实用户<br>"+changeMoney(parseInt(userR3));
                     var yonghu1 = document.getElementById("yonghu1");
                     var userR3Width = (userR3/customer_number).toFixed(2);
                     yonghu1.style.width = userR3Width*(100-2-userR1Width*100)+"%";
+                    document.getElementById('userR3').innerHTML="真实用户<br>"+changeMoney(parseInt(userR3))+"("+userR3Width*(100-2-userR1Width*100)+"%"+")";
 
-                    document.getElementById('userR2').innerHTML="僵尸用户<br>"+changeMoney(parseInt(userR2));
                     var yonghu2 = document.getElementById("yonghu2");
                     var userR2Width = (userR2/customer_number).toFixed(2);
                     yonghu2.style.width = userR2Width*(100-2-userR1Width*100)+"%";
+                    document.getElementById('userR2').innerHTML="僵尸用户<br>"+changeMoney(parseInt(userR2))+"("+userR2Width*(100-2-userR1Width*100)+"%"+")";
 
-                    document.getElementById('userR4').innerHTML="待确定用户<br>"+changeMoney(parseInt(userR4));
                     var yonghu4 = document.getElementById("yonghu4");
                     var userR4Width = (userR4/customer_number).toFixed(2);
                     yonghu4.style.width = userR4Width*(100-2-userR1Width*100)+"%";
+                    document.getElementById('userR4').innerHTML="待确定用户<br>"+changeMoney(parseInt(userR4))+"("+userR4Width*(100-2-userR1Width*100)+"%"+")";
 
-                    document.getElementById('userR5').innerHTML="无交易用户<br>"+changeMoney(parseInt(userR5));
                     var yonghu5 = document.getElementById("yonghu5");
                     var userR5Width = (userR5/customer_number).toFixed(2);
                     yonghu5.style.width = userR5Width*(100-2-userR1Width*100)+"%";
+                    document.getElementById('userR5').innerHTML="无交易用户<br>"+changeMoney(parseInt(userR5))+"("+userR5Width*(100-2-userR1Width*100)+"%"+")";
                 }
             });
     }
