小程序适配兼容

--- a/WebContent/crm/user_analysis.html
+++ b/WebContent/crm/user_analysis.html
@@ -6,7 +6,7 @@
     <title>用户简报</title>
     <link rel="shortcut icon" type="image/x-icon" href="../icon.png" />
     <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta content="width=device-width, initial-scale=0.3, maximum-scale=1, user-scalable=yes" name="viewport">  <!-- Bootstrap 3.3.6 -->
     <!-- Bootstrap 3.3.6 -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <!-- Font Awesome -->
@@ -144,7 +144,7 @@
                         <div class="col-sm-12">
                             <!--<div id="main2" style="height: 350px;"></div>-->
                             <div class="pull-left yonghu yonghu1 text-center" id="yonghu1"><span id="userR3">真实用户<br>5</span></div>
-                            <div class="pull-left yonghu yonghu4 text-center" id="yonghu4"><span id="userR4">待确定用户<br>60</span></div>
+                            <div class="pull-left yonghu yonghu4 text-center" id="yonghu4"><span id="userR4">待确认用户<br>60</span></div>
                             <div class="pull-left yonghu yonghu2 text-center" id="yonghu2"><span id="userR2">僵尸用户<br>30</span></div>
                             <div class="pull-left yonghu yonghu3 text-center" id="yonghu3"><span id="userR1">无效用户<br>5</span></div>
                             <div class="pull-left yonghu yonghu5 text-center" id="yonghu5"><span id="userR5">无交易用户<br>5</span></div>
@@ -814,7 +814,7 @@
     var userPayData = new Array();
     option6 = {
         title: [ {
-            text: '用户数分布 - 客户黏性',
+            text: '用户数分布（客户黏性）',
             x: 'left',
             top: '10px',
             textStyle: {
