修改待确认用户文案

--- a/WebContent/crm/user_analysis.html
+++ b/WebContent/crm/user_analysis.html
@@ -1349,7 +1349,7 @@
                     var yonghu4 = document.getElementById("yonghu4");
                     var userR4Width = (userR4/customer_number).toFixed(2);
                     yonghu4.style.width = userR4Width*(100-2-userR1Width*100)+"%";
-                    document.getElementById('userR4').innerHTML="待确定用户<br>"+changeMoney(parseInt(userR4))+"("+userR4Width*(100-2-userR1Width*100)+"%"+")";
+                    document.getElementById('userR4').innerHTML="待确认用户<br>"+changeMoney(parseInt(userR4))+"("+userR4Width*(100-2-userR1Width*100)+"%"+")";
 
                     var yonghu5 = document.getElementById("yonghu5");
                     var userR5Width = (userR5/customer_number).toFixed(2);
